force-app/main/default/objects/Medical_Supply__c/Medical_Supply__c.object-meta.xml
<CustomObject>
    <label>Medical Supply</label>
    <nameField>
        <label>Medical Supply Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Medical Supplies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>