force-app/main/default/objects/Medical_Supply__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Department</label>
    <referenceTo>Department__c</referenceTo>
    <relationshipLabel>Medical Supplies</relationshipLabel>
    <relationshipName>Medical_Supplies</relationshipName>
    <type>Lookup</type>
</CustomField>