force-app/main/default/objects/Medical_Supply__c/validationRules/Prevent_Negative_Stock.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Negative_Stock</fullName>
    <active>true</active>
    <errorConditionFormula>Quantity_On_Hand__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Quantity_On_Hand__c</errorDisplayField>
    <errorMessage>Quantity on hand cannot be negative.</errorMessage>
</ValidationRule>